Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
 
 <p>Follow these steps in order to install the project</p>
 
-<pre><code>git clone git://github.com/thibautquentinjacob/Mutlimodal-Interaction.git
+<pre><code>git config --global user.name "Surname Name"
+git config --global user.email "Mail address"
+git clone https://github.com/thibautquentinjacob/Mutlimodal-Interaction.git
+git remote add upstream https://github.com/thibautquentinjacob/Mutlimodal-Interaction.git
+git fetch upstream
+...
+git commit -a -m "committing changes"
+git push
 </code></pre>
 
 <h4>TODO</h4>
